--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
-execution_env=local
-#execution_env=remote
+#execution_env=local
+execution_env=remote
 
 appUrl=https://tutorialsninja.com/demo/
 email=usha.opencart@gmail.com
